force-app/main/default/objects/Warrant__c/Warrant__c.object-meta.xml
<CustomObject>
    <description>Check object for capturing relevant check data</description>
    <label>Warrant</label>
    <nameField>
        <displayFormat>WR-{000000}</displayFormat>
        <label>Warrant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warrants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>