force-app/main/default/objects/Warrant__c/fields/Approved_Warrant__c.field-meta.xml
<CustomField>
    <fullName>Approved_Warrant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is part of the approval VWF on every warrant.</description>
    <label>Approved Warrant</label>
    <type>Checkbox</type>
</CustomField>