force-app/main/default/objects/Warrant__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Case Managment object</description>
    <label>Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Warrants</relationshipLabel>
    <relationshipName>Warrants</relationshipName>
    <type>Lookup</type>
</CustomField>