force-app/main/default/objects/Warrant__c/fields/Cashier__c.field-meta.xml
<CustomField>
    <fullName>Cashier__c</fullName>
    <description>used in UWF document</description>
    <label>Cashier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>