force-app/main/default/objects/Warrant__c/fields/Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_Recorded__c</fullName>
    <description>used in UWF document</description>
    <label>Date Recorded</label>
    <type>Date</type>
</CustomField>