force-app/main/default/objects/Warrant__c/fields/Disbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Type__c</fullName>
    <label>Disbursement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Attorney Fees</fullName>
            </value>
            <value>
                <fullName>BOFE Penalty</fullName>
            </value>
            <value>
                <fullName>Buyback</fullName>
            </value>
            <value>
                <fullName>CAC Payment</fullName>
            </value>
            <value>
                <fullName>Certified Payroll Fee (CPR)</fullName>
            </value>
            <value>
                <fullName>Conceded</fullName>
            </value>
            <value>
                <fullName>Court Costs</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>EDD Payment</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>IRS</fullName>
            </value>
            <value>
                <fullName>Levy</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Over payment</fullName>
            </value>
            <value>
                <fullName>Penalty Fee</fullName>
            </value>
            <value>
                <fullName>Photo Copy Fee</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Redemption of Check (NSF)</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Refund Certified Payroll Fee (CPR)</fullName>
            </value>
            <value>
                <fullName>Refund Garment Registration</fullName>
            </value>
            <value>
                <fullName>Return Taxes</fullName>
            </value>
            <value>
                <fullName>Return to Defendant</fullName>
            </value>
            <value>
                <fullName>Subpoena Cost Recovery</fullName>
            </value>
            <value>
                <fullName>Tax Lien</fullName>
            </value>
            <value>
                <fullName>To Assignee</fullName>
            </value>
            <value>
                <fullName>Training Fund</fullName>
            </value>
            <value>
                <fullName>Unpaid Wage Fund</fullName>
            </value>
            <value>
                <fullName>Witness Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>