force-app/main/default/objects/Warrant__c/fields/Funds_Due_to_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Funds_Due_to_Third_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funds Due to Third Party</label>
    <type>Checkbox</type>
</CustomField>