force-app/main/default/objects/Warrant__c/fields/Hand_Delivery_Signature__c.field-meta.xml
<CustomField>
    <fullName>Hand_Delivery_Signature__c</fullName>
    <label>Hand Delivery Signature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>