force-app/main/default/objects/Warrant__c/fields/Not_Approved_Comments__c.field-meta.xml
<CustomField>
    <fullName>Not_Approved_Comments__c</fullName>
    <description>When a check is not approved it is required to add comments to the reason.</description>
    <label>Not Approved Comments</label>
    <type>TextArea</type>
</CustomField>