force-app/main/default/objects/Warrant__c/fields/Not_Approved_Warrant__c.field-meta.xml
<CustomField>
    <fullName>Not_Approved_Warrant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is part of the approval VWF process.</description>
    <label>Not Approved Warrant</label>
    <type>Checkbox</type>
</CustomField>