force-app/main/default/objects/Warrant__c/fields/Old_Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Old_Status_Comment__c</fullName>
    <description>For user to provide additional comments on the status of the check, maximum character limit is 140</description>
    <label>Old Status Comment</label>
    <length>140</length>
    <type>Text</type>
</CustomField>