force-app/main/default/objects/Warrant__c/fields/Secondary_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approval_Date__c</fullName>
    <label>Secondary Approval Date</label>
    <type>Date</type>
</CustomField>