force-app/main/default/objects/Warrant__c/fields/Secondary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used when a check is over $15k.</description>
    <label>Secondary Approver</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Warrants (Secondary Approver)</relationshipLabel>
    <relationshipName>Warrants_Approved_2</relationshipName>
    <type>Lookup</type>
</CustomField>