force-app/main/default/objects/Warrant__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>8 digit check serial - warrant number without check digit.</description>
    <displayFormat>{00000000}</displayFormat>
    <label>Serial Number</label>
    <type>AutoNumber</type>
</CustomField>