force-app/main/default/objects/Warrant__c/fields/Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Status_Comment__c</fullName>
    <description>Pick List for Void/Cancel/Stop Reason</description>
    <label>Status Comment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect address</fullName>
            </value>
            <value>
                <fullName>Payee did not receive</fullName>
            </value>
            <value>
                <fullName>Payee lost warrant</fullName>
            </value>
            <value>
                <fullName>Returned USPS/Undeliverable</fullName>
            </value>
            <value>
                <fullName>Stale dated</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>Warrant damaged</fullName>
            </value>
            <value>
                <fullName>Warrant not approved to print</fullName>
            </value>
            <value>
                <fullName>Wrong payee</fullName>
            </value>
            <value>
                <fullName>Wrong payment amount</fullName>
            </value>
            <value>
                <fullName>Warrant batch void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>