force-app/main/default/objects/Warrant__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <inlineHelpText>Date of last status change</inlineHelpText>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>