force-app/main/default/objects/Warrant__c/fields/Successor__c.field-meta.xml
<CustomField>
    <fullName>Successor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Successor</label>
    <type>Checkbox</type>
</CustomField>