force-app/main/default/objects/Warrant__c/fields/Warrant_Batch__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Batch__c</fullName>
    <label>Warrant Batch</label>
    <referenceTo>Warrant_Batch__c</referenceTo>
    <relationshipLabel>Warrants</relationshipLabel>
    <relationshipName>Warrant</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>