force-app/main/default/objects/Warrant__c/fields/Warrant_Counter_Valid__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Counter_Valid__c</fullName>
    <formula>CASE( TEXT(Status__c), 
"Voided", 0, 
"Canceled", 0, 
"Stopped", 0, 
1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warrant Counter_Valid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>