force-app/main/default/objects/Warrant__c/fields/Warrant_Counter_Void__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Counter_Void__c</fullName>
    <formula>CASE( TEXT(Status__c), 
"Voided", 1, 
"Canceled", 1, 
"Stopped", 1, 
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warrant Counter Void</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>