force-app/main/default/objects/Warrant__c/fields/Warrant_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Delivery_Method__c</fullName>
    <label>Warrant Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mailed</fullName>
            </value>
            <value>
                <fullName>Hand Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>