force-app/main/default/objects/Warrant__c/fields/Warrant_Number__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Number__c</fullName>
    <description>The complete check number consist of warrant serial with check digit.</description>
    <formula>Serial_Number__c &amp; TEXT(9-MOD (VALUE (MID (Serial_Number__c, 1, 1))
+ VALUE (MID (Serial_Number__c, 2, 1))
+ VALUE (MID (Serial_Number__c, 3, 1))
+ VALUE (MID (Serial_Number__c, 4, 1))
+ VALUE (MID (Serial_Number__c, 5, 1))
+ VALUE (MID (Serial_Number__c, 6, 1))
+ VALUE (MID (Serial_Number__c, 7, 1))
+ VALUE (MID (Serial_Number__c, 8, 1)),9))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warrant Number</label>
    <type>Text</type>
</CustomField>