force-app/main/default/objects/Warrant__c/fields/Warrant_Signer__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Signer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup field to Internal Employee</description>
    <label>Warrant Signer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DIR_Employee__c.Authorized_Signer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Warrants (Warrant Signer)</relationshipLabel>
    <relationshipName>Warrants_Signed</relationshipName>
    <type>Lookup</type>
</CustomField>