force-app/main/default/objects/Warrant__c/recordTypes/Warrant.recordType-meta.xml
<RecordType>
    <fullName>Warrant</fullName>
    <active>true</active>
    <description>Normal page layout for Warrant record type</description>
    <label>Warrant</label>
</RecordType>