force-app/main/default/objects/Warrant__c/recordTypes/Warrant_Approved.recordType-meta.xml
<RecordType>
    <fullName>Warrant_Approved</fullName>
    <active>true</active>
    <description>Record type to lock fields on layout when Warrant is approved</description>
    <label>Warrant Approved</label>
</RecordType>