force-app/main/default/objects/Warrant__c/listViews/Printed_Checks.listView-meta.xml
<ListView>
    <fullName>Printed_Checks</fullName>
    <columns>NAME</columns>
    <columns>Warrant_Batch__c</columns>
    <columns>Office_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Printed</value>
    </filters>
    <label>Printed Checks</label>
</ListView>