force-app/main/default/objects/Warrant__c/listViews/UWF.listView-meta.xml
<ListView>
    <fullName>UWF</fullName>
    <columns>NAME</columns>
    <columns>Warrant_Batch__c</columns>
    <columns>Office_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Disbursement_Type__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Disbursement_Type__c</field>
        <operation>equals</operation>
        <value>Unpaid Wage Fund</value>
    </filters>
    <label>UWF</label>
    <language>en_US</language>
</ListView>